# claymore

./: .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  CLAYMORE_ALL_DOCS.md  ENGINEERING_GUIDELINES.md  LICENSE  Makefile  README.md  RISKS_AND_MITIGATIONS.md  SECURITY.md  WORKPLAN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
evals/: corpus.py  harness.py
src/claymore/: __init__.py  audit.py  config.py  domain.py  local_store.py  logging.py  ports.py
src/claymore/actions/: approvals.py  writeback.py
src/claymore/agent/: __init__.py  agent_loop.py  conversation.py  hardware.py  llm.py  router.py  scene_designer.py  sdk_loop.py  temporal.py  tools.py
src/claymore/api/: app.py  runtime.py  security.py
src/claymore/api/routes/: actions.py  admin.py  agent.py  ask.py  connectors.py  local.py  telegram.py  whatsapp.py
src/claymore/auth/: models.py
src/claymore/execute/: approvals.py  charts.py  claude_science.py  compute.py  datasets.py  ml_analysis.py  opentrons.py  science_agent.py  workflows.py
src/claymore/ingest/: codelogs.py  episodes.py  granola.py  normalize.py  pipeline.py
src/claymore/ingest/composio/: hub.py  manager.py  sources.py  state.py
src/claymore/mcp_server/: server.py
src/claymore/memory/: graph.py  identity.py  ontology.py  reconcile.py  retrieval.py
src/claymore/messaging/: __init__.py  telegram.py  twilio_sms.py  whatsapp.py
src/claymore/proactive/: triggers.py
tests/: conftest.py  fixtures.py  test_admin.py  test_agent_loop_history.py  test_composio_ingest.py  test_composio_live_hub.py  test_config_and_api.py  test_connector_manager.py  test_connector_routes.py  test_contracts.py  test_conversation.py  test_episodes.py  test_evals.py  test_github_ingest.py  test_ingest_pipeline.py  test_llm.py  test_local_routes.py  test_mcp_server.py  test_memory.py  test_ml_analysis.py  test_notion_ingest.py  test_proactive.py  test_reconcile.py  test_router.py  test_sdk_loop.py  test_slack_ingest.py  test_telegram.py  test_temporal.py  test_tools.py  test_visibility_resolution.py  test_whatsapp.py  test_writeback.py
tests/adversarial/: test_admin.py  test_agent_loop_history.py  test_claude_science.py  test_composio_ingest.py  test_conversation.py  test_episodes.py  test_github_ingest.py  test_ingest_pipeline.py  test_llm.py  test_local_store.py  test_mcp_server.py  test_memory.py  test_ml_analysis.py  test_proactive.py  test_reconcile.py  test_router.py  test_scene_designer.py  test_telegram.py  test_temporal.py  test_tools.py  test_web_auth.py  test_whatsapp.py  test_writeback.py
tests/integration/: test_claude_science_live.py  test_graphiti_live.py  test_llm_live.py
web/: PROJECTS_BUILD.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  fontsource.d.ts  index.css  main.tsx
web/src/components/: Background.tsx  ErrorBoundary.tsx  Sidebar.tsx
web/src/components/ask/: AgentTurn.tsx  AnswerView.tsx  AskBox.tsx  AskView.tsx  (+5 more)
web/src/lib/: agent.ts  api.ts  autopilot.ts  connectors.ts  d3-force-3d.d.ts  deck.ts  exaAugment.ts  gapEngine.ts  graphLayout.ts  hardware.ts  local.ts  mockData.ts  projectMock.ts  projectStore.ts  projectTypes.ts  protocol.ts  sources.tsx  types.ts  utils.ts  webgl.ts
web/tests/: gapEngine.adversarial.ts
(+40 files in other folders)
